[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/Apple.gd" type="Script" id=1]
[ext_resource path="res://sprites/appleSprite.png" type="Texture" id=2]
[ext_resource path="res://sounds/item bom (1).wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 73.5, 78.5 )

[node name="Apple" type="Area2D"]
position = Vector2( 0, -5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.5, 4.5 )
shape = SubResource( 1 )

[node name="AppleSprite" type="Sprite" parent="."]
position = Vector2( 61, 71 )
scale = Vector2( 0.569583, 0.569583 )
texture = ExtResource( 2 )

[node name="CollectedSoundGood" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 15.0
pitch_scale = 0.98

[connection signal="body_entered" from="." to="." method="_on_Apple_body_entered"]
